@@ -52,6 +52,12 @@ IN DEVELOPMENT
       sorts optimally for use with groupcompress compressors. (John Arbash
       Meinel, Robert Collins)
 
+    * Repository APIs ``get_deltas_for_revisions()`` and
+      ``get_revision_delta()`` now support an optional ``specific_fileids``
+      parameter. If provided, the deltas are filtered so that only those
+      file-ids, their parents and their children are included.
+      (Ian Clatworthy)
+
   INTERNALS:
 
 
